Fixed preloader visibility.

--- a/css/preloader.css
+++ b/css/preloader.css
@@ -1,4 +1,6 @@
 #preloader {
+    z-index: 1;
+    background: inherit;
     display: table;
 }
 
